name:                s3-signer
version:             0.4.0.0
homepage:            https://github.com/dmjio/s3-signer
bug-reports:         https://github.com/dmjio/s3-signer/issues
synopsis:            Pre-signed Amazon S3 URLs
description:
        .
        s3-signer creates cryptographically secure Amazon S3 URLs that expire within a user-defined
        period. It allows uploading and downloading of content from Amazon S3.
        Ideal for AJAX direct-to-s3 uploads via CORS and secure downloads.
        Web framework agnostic with minimal dependencies.
        .
        > module Main where
        > import           Network.S3
        > main :: IO ()
        > main = print =<< generateS3URL credentials request
        >   where
        >     credentials = S3Keys "<public-key-goes-here>" "<secret-key-goes-here>"
        >     request     = S3Request S3GET "application/extension" "bucket-name" "file-name.extension" 3 -- three seconds until expiration
        .
        Result
        .
        > S3URL "https://bucket-name.s3.amazonaws.com/file-name.extension?AWSAccessKeyId=<public-key-goes-here>&Expires=1402346638&Signature=1XraY%2Bhp117I5CTKNKPc6%2BiihRA%3D"

license:             BSD3
license-file:        LICENSE
author:              David Johnson <djohnson.m@gmail.com>, William Casarin <jb55@jb55.com>
maintainer:          David Johnson <djohnson.m@gmail.com>
copyright:           David Johnson (c) 2014-2018
category:            AWS, Network
build-type:          Simple
cabal-version:       2.0
extra-source-files:  README.md
tested-with: GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

library internal
  default-language:  Haskell2010
  build-depends: base == 4.*
               , base64-bytestring
               , bytestring
               , byteable
               , utf8-string
               , case-insensitive >= 1.2
               , blaze-builder >= 0.4
               , http-types
               , cryptohash
               , time

  hs-source-dirs: src
  exposed-modules: Network.S3
                 , Network.S3.Sign
                 , Network.S3.URL
                 , Network.S3.Types

library
  build-depends:       base == 4.*
                     , base64-bytestring
                     , bytestring
                     , byteable
                     , utf8-string
                     , case-insensitive >= 1.2
                     , blaze-builder >= 0.4
                     , http-types
                     , cryptohash
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall
  exposed-modules:     Network.S3
  other-modules:       Network.S3.Sign
                     , Network.S3.Time
                     , Network.S3.URL
                     , Network.S3.Types


test-suite test-simple
  default-language:  Haskell2010
  type: exitcode-stdio-1.0
  main-is: test/Test.hs
  build-depends: internal
               , base == 4.*
               , bytestring
               , blaze-builder >= 0.4
               , time


source-repository head
  type:     git
  location: https://github.com/dmjio/s3-signer
